@startuml ViwesUML
package Views {
    package Login {
        class "LoginScreen" {
            +AuthViewModel* authViewModel
            +void navigateToHome()
        }
        "LoginScreen" o-- "AuthViewModel"
    }

    package Signup {
        class "CredentialScreen" {
            +AuthViewModel* authViewModel
            +BaseUserInfoViewModel* infoViewModel
            +UserViewModel* userViewModel
            +User* user
            +void showSnackBar()
        }
        "CredentialScreen" o-- "AuthViewModel"
        "CredentialScreen" o-- "BaseUserInfoViewModel"
        "CredentialScreen" o-- "UserViewModel"
        "CredentialScreen" o-- "User"

        package BaseUser {
            class "BaseUserSignUpScreen" {
                +AuthViewModel* authViewModel
                +BaseUserInfoViewModel* baseUserInfoViewModel
                -dynamic _onAddressError()
                -dynamic _addressConfirmation()
            }
            "BaseUserSignUpScreen" o-- "AuthViewModel"
            "BaseUserSignUpScreen" o-- "ExpertInfoViewModel"
        }

        package Expert {
            class "ExpertsSignUpScreen" {
                +AuthViewModel* authViewModel
                +ExpertInfoViewModel* expertInfoViewModel
                -dynamic _onAddressError()
                -dynamic _addressConfirmation()
            }
            "ExpertsSignUpScreen" o-- "AuthViewModel"
            "ExpertsSignUpScreen" o-- "ExpertInfoViewModel"
        }
    }

    package Welcome {
        class "WelcomeScreen" {
            +AuthViewModel* authViewModel
            +BaseUserViewModel* baseUserViewModel
            +void navigateToHome()
        }
        "WelcomeScreen" o-- "AuthViewModel"
        "WelcomeScreen" o-- "BaseUserViewModel"
    }
}
@enduml